--- a/worldGMS.example.properties
+++ b/worldGMS.example.properties
@@ -11,10 +11,10 @@ net.sf.odinms.world.admin=false
 net.sf.odinms.world.flags=0
 
 # Name of the Server
-net.sf.odinms.login.serverName=Lidium
+net.sf.odinms.login.serverName=BlueStory
 
 # Event Message at Channel Selection
-net.sf.odinms.login.eventMessage=Lidium
+net.sf.odinms.login.eventMessage=BlueStory
 
 # Flag at Channel Selection  0: Nothing 1: Event 2: New 3: Hot
 net.sf.odinms.login.flag=2
@@ -23,7 +23,7 @@ net.sf.odinms.login.flag=2
 net.sf.odinms.login.maxCharacters=3
 
 # Server Scrolling Message
-net.sf.odinms.world.serverMessage=Lidium
+net.sf.odinms.world.serverMessage=BlueStory
 
 # total user limit of the server
 net.sf.odinms.login.userlimit=1500
