--- a/channel.example.properties
+++ b/channel.example.properties
@@ -1,10 +1,10 @@
-# hostname or IP address of your world server
+# Hostname or IP address of your world server
 net.sf.odinms.world.host=127.0.0.1
 
-# number of channels to host in this process
+# Number of channels to host in this process
 net.sf.odinms.channel.count=1
 
-# channel keys (these are defined in the channels table)
+# Channel keys (these are defined in the channels table)
 net.sf.odinms.channel.0.key=release1
 net.sf.odinms.channel.1.key=release2
 net.sf.odinms.channel.2.key=release3
