--- a/db.example.properties
+++ b/db.example.properties
@@ -1,8 +1,8 @@
-# driver class
+# Driver class
 database.driver=com.mysql.cj.jdbc.Driver
-# url
+# URL
 database.url=jdbc:mysql://localhost:3306/v111?autoReconnect=true
-# userName
+# MySQL user
 database.user=root
-# password
+# MySQL password
 database.password=root
